git hub ikkinchi qism

--- a/gallary/index.html
+++ b/gallary/index.html
@@ -37,6 +37,25 @@
                     <p>Lorem ipsum dolor..</p>
                 </div>
             </div>
+            <div class="card cars">
+                <div class="image">
+                    <img src="cars.webp" alt="">
+                </div>
+                <div class="card-body">
+                    <h3>Bmw</h3>
+                    <p>Lorem ipsum dolor..</p>
+                </div>
+            </div>
+            <div class="card cars">
+                <div class="image">
+                    <img src="cars.webp" alt="">
+                </div>
+                <div class="card-body">
+                    <h3>Bmw</h3>
+                    <p>Lorem ipsum dolor..</p>
+                </div>
+            </div>
+
             <div class="card people">
                 <div class="image">
                     <img src="peole.webp" alt="">
@@ -46,6 +65,7 @@
                     <p>Lorem ipsum dolor..</p>
                 </div>
             </div>
+
             <div class="card natur">
                 <div class="image ">
                     <img src="nature.jpg" alt="">
@@ -55,6 +75,7 @@
                     <p>Lorem ipsum dolor..</p>
                 </div>
             </div>
+
             <div class="card cars">
                 <div class="image ">
                     <img src="cars.png" alt="">
